src/test/ui/type-alias-impl-trait/issue-65679-inst-opaque-ty-from-val-twice.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-65679-inst-opaque-ty-from-val-twice.rs:5:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-65679-inst-opaque-ty-from-val-twice.rs:18:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

